--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
         <aside class="sidebar">
             <div class="avatar">
-                <img src="assets/img/Picture2.png" onerror="this.src='https://via.placeholder.com/400?text=Chi+Zhang'" alt="Chi Zhang">
+                <img src="/assets/img/Picture2.png" onerror="this.src='/assets/img/Picture2.png'" alt="Chi Zhang">
             </div>
             
             <div class="sidebar-text-container">
