--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
                 </div>
                 <ul class="service-list">
                     <li><strong>Associate Editor</strong> for <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76" class="text-link" target="_blank">TCSVT</a> since 2024</li>
-                    <li><strong>Area Chair</strong> for <a href="https://icml.cc/Conferences/2026" class="text-link" target="_blank">ICML 2026</a>, <a href="https://iclr.cc/" class="text-link" target="_blank">ICLR 2026</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" class="text-link" target="_blank">CVPR 2026</a></li>
-                    <li><strong>Area Chair</strong> for ACL ARR (2025), <a href="https://acmmm2025.org/" class="text-link" target="_blank">ACM Multimedia 2025</a>, <a href="https://2025.ijcnn.org/" class="text-link" target="_blank">IJCNN 2025</a></li>
+                    <li><strong>Area Chair</strong> for <a href="https://icml.cc/Conferences/2026" class="text-link" target="_blank">ICML 2026</a>, <a href="https://iclr.cc/" class="text-link" target="_blank">ICLR 2026</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" class="text-link" target="_blank">CVPR 2026</a>, ACL ARR (2025), <a href="https://acmmm2025.org/" class="text-link" target="_blank">ACM Multimedia 2025</a>, <a href="https://2025.ijcnn.org/" class="text-link" target="_blank">IJCNN 2025</a></li>
                     <li><strong>Reviewer</strong> for T-PAMI, ICLR, CVPR, NeurIPS, etc.</li>
                 </ul>
             </section>
