--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                 
                 <div class="news-container">
                     <div class="news-list">
+                        <div class="news-item"><span class="news-date">Dec 2025</span><div class="news-content">  <a href="https://arxiv.org/abs/2510.23285" class="text-link" target="_blank">AdaSDE</a> is accepted by <a href="https://neurips.cc/Conferences/2025" class="text-link" target="_blank">NeurIPS 2025</a> .</div></div>
                         <div class="news-item"><span class="news-date">Nov 2025</span><div class="news-content">Serving as Area Chair for <a href="https://icml.cc/Conferences/2026" class="text-link" target="_blank">ICML 2026</a>.</div></div>
                         <div class="news-item"><span class="news-date">Sep 2025</span><div class="news-content">Presenting a tutorial on <a href="https://wangywust.github.io/iccv-tutorial-reasoning-vlm" class="text-link" target="_blank">reasoning in GUI agents</a> at ICCV 2025.</div></div>
                         <div class="news-item"><span class="news-date">Sep 2025</span><div class="news-content">🚀 We present <a href="https://worldforge-agi.github.io/" class="text-link" target="_blank">WorldForge</a>, a training-free world model built on video diffusion.</div></div>
@@ -364,8 +365,7 @@
                 </div>
                 <ul class="service-list">
                     <li><strong>Associate Editor</strong> for <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76" class="text-link" target="_blank">TCSVT</a> since 2024</li>
-                    <li><strong>Area Chair</strong> for <a href="https://icml.cc/Conferences/2026" class="text-link" target="_blank">ICML 2026</a>, <a href="https://iclr.cc/" class="text-link" target="_blank">ICLR 2026</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" class="text-link" target="_blank">CVPR 2026</a></li>
-                    <li><strong>Area Chair</strong> for ACL ARR (2025), <a href="https://acmmm2025.org/" class="text-link" target="_blank">ACM Multimedia 2025</a>, <a href="https://2025.ijcnn.org/" class="text-link" target="_blank">IJCNN 2025</a></li>
+                    <li><strong>Area Chair</strong> for <a href="https://icml.cc/Conferences/2026" class="text-link" target="_blank">ICML 2026</a>, <a href="https://iclr.cc/" class="text-link" target="_blank">ICLR 2026</a>, <a href="https://cvpr.thecvf.com/Conferences/2026" class="text-link" target="_blank">CVPR 2026</a>, <a href="https://aclrollingreview.org/" class="text-link" target="_blank">ACL ARR 2025</a>, <a href="https://acmmm2025.org/" class="text-link" target="_blank">ACM Multimedia 2025</a>, <a href="https://2025.ijcnn.org/" class="text-link" target="_blank">IJCNN 2025</a></li>
                     <li><strong>Reviewer</strong> for T-PAMI, ICLR, CVPR, NeurIPS, etc.</li>
                 </ul>
             </section>
