--- a/index.html
+++ b/index.html
@@ -797,8 +797,8 @@
 
 
                                         <div class="gallery-item" onclick="openModal(this)">
-                        <img src="album/7.JPG" alt="Group Members">
-                         <div class="gallery-caption">Group Members</div>
+                        <img src="album/7.JPG" alt="DDL EVE">
+                         <div class="gallery-caption"> DDL EVE</div>
                     </div>
 
                                                             <div class="gallery-item" onclick="openModal(this)">
