--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <div class="prose">
                     <p>
                         I like singing and was in Top 8 of Good Voice of Universities 2015 in CUMT. I play football regularly. 
-                        I am a loyal fan of  <span style="text-decoration: line-through; opacity: 0.5;">FC Barcelona</span> & <span style="text-decoration: line-through; opacity: 0.5;">PSG</span> <span style="color: #10b981; font-weight: bold;">Inter Miami</span> .
+                        I am a loyal fan of  <span style="text-decoration: line-through; opacity: 0.5;">FC Barcelona</span>  <span style="text-decoration: line-through; opacity: 0.5;">PSG</span> <span style="color: #10b981; font-weight: bold;">Inter Miami</span> .
                     </p>
                     <p>
                         My favorite singers are <a href="https://zh.wikipedia.org/wiki/%E5%BC%A0%E5%AD%A6%E5%8F%8B" class="text-link" target="_blank">Jacky Cheung</a> and <a href="https://en.wikipedia.org/wiki/Freddie_Mercury" class="text-link" target="_blank">Freddie Mercury</a>.
