--- a/index.html
+++ b/index.html
@@ -716,7 +716,21 @@
                     </div>
                 </div>
 
-
+                <!-- 论文8: MotionAgent -->
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="images/teaser/motionagent.png" alt="MotionAgent">
+                    </div>
+                    <div class="project-info">
+                        <h3>MotionAgent: Fine-grained Controllable Video Generation via Motion Field Agent</h3>
+                        <div class="authors">Xinyao Liao, Xianfang Zeng, Liao Wang, Gang Yu, Guosheng Lin, <strong>Chi Zhang</strong></div>
+                        <span class="venue">ICCV 2025</span>
+                        <div class="btn-group">
+                            <a href="https://arxiv.org/pdf/2502.03207" target="_blank" class="btn-link">PDF</a>
+                            <a href="https://github.com/leoisufa/MotionAgent" target="_blank" class="btn-link">Code</a>
+                        </div>
+                    </div>
+                </div>
 
 
                 <!-- 论文7: Learning to Be A Doctor -->
