--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 </div>
                 <div class="prose">
                     <p>
-                        I like singing and was in Top 8 of Good Voice of Universities 2015 in CUMT. I play football regularly. 
+                        I like singing and playing football. 
                         I am a loyal fan of  <span style="text-decoration: line-through; opacity: 0.5;">FC Barcelona</span>  <span style="text-decoration: line-through; opacity: 0.5;">PSG</span> <span style="color: #10b981; font-weight: bold;">Inter Miami</span> .
                     </p>
                     <p>
@@ -974,7 +974,7 @@
                         </div>
                     </div>
                 </div>
-
+<!-- 
                 <div class="project-card">
                     <div class="project-img">
                         <img src="images/teaser/shapegpt.png" alt="ShapeGPT">
@@ -982,14 +982,14 @@
                     <div class="project-info">
                         <h3>ShapeGPT: 3D Shape Generation with A Unified Multi-modal Language Model</h3>
                         <div class="authors">Fukun Yin, Xin Chen, <strong>Chi Zhang</strong>, Biao Jiang, Zibo Zhao, Jiayuan Fan, Gang Yu, Taihao Li, Tao Chen</div>
-                        <span class="venue">Arxiv 2023</span>
+                        <span class="venue">IEEE Transactions on Multimedia 2025</span>
                         <div class="btn-group">
                             <a href="https://shapegpt.github.io/" target="_blank" class="btn-link">Project Page</a>
                             <a href="https://arxiv.org/abs/2311.17618" target="_blank" class="btn-link">PDF</a>
                             <a href="https://github.com/OpenShapeLab/ShapeGPT" target="_blank" class="btn-link">Code</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
 
