--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
                 </div>
                 <div class="prose">
                     <p>
-                        I am a tenure-track Assistant Professor and PI at <a href="https://en.westlake.edu.cn/faculty/chi-zhang.html" class="text-link" target="_blank">Westlake University</a>, where I lead the AGI Lab. Before joining Westlake University, I worked as a scientist at Tencent.
+                        I am a tenure-track Assistant Professor and PI at Westlake University, where I lead the AGI Lab. Before joining Westlake University, I worked as a scientist at Tencent.
                     </p>
                     <p>
-                        I obtained my Ph.D. degree at the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore, where I worked under the supervision of <a href="https://guosheng.github.io/" class="text-link" target="_blank">Prof. Guosheng Lin</a>. I also work closely with <a href="https://cshen.github.io/" class="text-link" target="_blank">Prof. Chunhua Shen</a> and <a href="http://faculty.cumt.edu.cn/ruiyao/en/index.htm" class="text-link" target="_blank">Prof. Rui Yao</a> in research. I was recognized among World's Top 2% Scientists by Stanford University in <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/6" class="text-link" target="_blank">2023</a> and <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/7" class="text-link" target="_blank">2024</a>.
+                        I obtained my Ph.D. degree at the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore, where I worked under the supervision of Prof. Guosheng Lin. I also work closely with Prof. Chunhua Shen and Prof. Rui Yao in research. I was recognized among World's Top 2% Scientists by Stanford University in 2023 and 2024.
                     </p>
                     
                     <div class="highlight-box">
